# nyfed-neutral-rate

./: .cursorrules  .gitignore  README.md  plot_rates.py  pyproject.toml  requirements.txt
data_out/: nyfed_ff_longrun_percentiles.csv  pdf_extracts.csv  sep_dots.csv  sep_page_urls.txt  sep_pdf_extracts.csv  sep_pdf_urls.txt  sep_summary.csv  us_rstar_comparison.xlsx  xlsx_extracts.csv
external_data/: Hartley2024_RStar_12312025.xlsx
scripts/: 01_scrape_and_download.py  02_extract_xlsx.py  03_extract_pdf_llm.py  04_combine_and_plot.py  compare_hartley.py  plot_rates.py  run_all.py  sep_01_discover_pages.py  sep_01b_download_pdfs.py  sep_02_extract_dotplot.py  sep_02b_extract_pdf_llm.py  sep_02c_combine_extracts.py  sep_03_plot_longrun.py  sep_run_all.py
src/: __init__.py  download.py  extract_pdf.py  extract_pdf_openai.py  extract_xlsx.py  pipeline.py  scrape_manifest.py  utils.py
tests/: __init__.py  test_parsing.py
